# cji101

./: README.md
flask-demo/: app.py  model.py  poker.py  pymysql_practice.ipynb  pyproject.toml
flask-demo/static/: sometext.txt
flask-demo/static/css/: test.css
flask-demo/templates/: hello.html  hello_post.html
flask-demo/utils/: series.py
html/: test.html
note/: etl-20250518.md  flask-20250510.md
poetry-demo/: pyproject.toml
pyenv_poetry/: pyproject.toml
web-crawler/: 01_requests_practice.py  02_requests_multiple_pages.py  03_extract_ptt_articles.py  04_dynamic_web_page_now_news.py  05_pandas_practice.ipynb  06_pandas_null_value.ipynb  07_pandas_sql_join.ipynb  08_pandas_sql.ipynb  09_selenium_practice.py  10_selenium_ptt.py  11_dcard_photography.py  browser_cookie_test.py  crawler_utilities.py  pyproject.toml
web-crawler/ptt_article/: Fw_ [公告] 請避免與登入1次之帳號進行交易 發錢.txt  Re_ [問卦] 六國論 弱國要和平 有錯？.txt  Re_ [問卦] 川寶會讓美國破產嗎.txt  Re_ [問卦] 法律人：「加重刑罰不能解決問題」，該.txt  Re_ [問卦] 為啥台灣文創底蘊遠輸中國.txt  Re_ [問卦] 美國直接併吞台灣不就好了？.txt  Re_ [新聞] 日式飯糰生意太好 高雄包租婆眼紅想.txt  Re_ [新聞] 日式飯糰生意太好 高雄包租婆眼紅想毀約.txt  Re_ [新聞] 日本人「全球最瘦」 醫曝4關鍵：不是靠.txt  Re_ [新聞] 獨／為了水管打架！新北男雙眼遭鄰居挖.txt  [公告] 八卦板板規(2025.01.21).txt  [公告] 壹蘋未確實查證警告，禁發記者魏盈盈新聞.txt  [協尋] 4_17高師大20.00警察亂抓人.txt  [問卦] 20年前 身心被遙控手機掌握早晚各種行動?.txt  [問卦] Meta被爆料好幾天了沒人在乎？.txt  [問卦] PTT有哪些看板沒落廢掉的？.txt  [問卦] 一家名店年賺400萬你信嗎？.txt  [問卦] 以前塑膠袋不用錢有多爽?.txt  [問卦] 受害者變加害者.txt  [問卦] 台北101觀景台門票也太貴了吧！.txt  [問卦] 台灣肥宅移民去日本會瘦嗎.txt  [問卦] 四叉貓燒烤店八千事件還有人記得嗎.txt  [問卦] 在海邊尿急想要借廁所 旁邊有個兵營.txt  [問卦] 思覺失調症的藥是不是要吃一段時間才有效.txt  [問卦] 我開始騙自己。你不再痴痴等著我～.txt  [問卦] 政治正確影集看不下去.txt  [問卦] 沒人發現項羽3萬人打贏劉邦56萬很猛嗎！.txt  [問卦] 沒錢結婚生子，怎麼辦= =....._.txt  [問卦] 為什麼國人要去大阪萬國博覽會？.txt  [問卦] 為啥埃及不讓人挖金字塔？.txt  [問卦] 為啥老人喜歡擴音講line_.txt  [問卦] 現在台灣社會是瘋狗化嗎.txt  [問卦] 網路四大不可信怎麼落沒的??.txt  [問卦] 美國直接併吞台灣不就好了？.txt  [問卦] 習主席看川普在裝B有何感想_.txt  [問卦] 老婆感覺有點胖怎麼辦？.txt  [問卦] 角膜盲患者不用等移植惹.txt  [問卦] 講到“德不配位”，你直覺會想到誰？.txt  [問卦] 警察局可以錄音嗎.txt  [問卦] 這篇文章是不是罵到一堆人.txt  (+8 more)
